fix: wrap breadcrumbs in nav

--- a/custom-app/assets/styles.css
+++ b/custom-app/assets/styles.css
@@ -206,7 +206,7 @@ h1, h2, h3, h4 {
 }
 
 .page-breadcrumb {
-	position: relative;
+	position: relative !important;
 	padding: 0 !important;
 	width: 100%;
 	max-width: var(--container-width);
